[tool.poetry]
name = "peer-review"
version = "0.1.0"
description = "Ad hoc work visualizing probability distributions"
authors = ["Br0k3nDesign <adam.j.moran@gmail.com>"]
readme = "README.md"
packages = [{include = "peer_review"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
plotly = "^5.12.0"
numpy = "^1.24.1"
pandas = "^1.5.2"
dash = "^2.7.1"
tabulate = "^0.9.0"
coloredlogs = "^15.0.1"
pydantic = "^1.10.4"
pyfunctional = "^1.4.3"
scipy = "^1.10.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
